hasqd/tests/coptest/usr/ab/hsl/neg/fid_hsl_ag_net_protocol.sts
#!/bin/sh

# HSL: agent net protocol

in=$(basename $0)
in=${in%.*} 

$1/hasqd -lqnc dprn=1 dsvt=1 dagt=1 p=0 s=$in.inp

